--- a/my-app/src/pages/department/Department.css
+++ b/my-app/src/pages/department/Department.css
@@ -27,6 +27,7 @@
       font-size: 20px;
       cursor: pointer;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      z-index: 9;
     }
     .filter-icon:hover {
       background-color: #0056b3;
